// Copyright 2018 gRPC authors.

syntax = "proto3";

package grpc.gcp;

option java_package = "io.grpc.alts.internal";

enum SecurityLevel {
  SECURITY_NONE = 0;
  INTEGRITY_ONLY = 1;
  INTEGRITY_AND_PRIVACY = 2;
}

message RpcProtocolVersions {

  message Version {
    uint32 major = 1;
    uint32 minor = 2;
  }

  Version max_rpc_version = 1;

  Version min_rpc_version = 2;
}
